<resources>
    <string name="app_name">SwiPixel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_parameters">hello_parameters !</string>
    <string name="hello_home_page">hello_home_page !</string>
    <string name="hello_selection_photo">hello_selection_photo !</string>
    <string name="hello_gallery_acces">hello_gallery_acces</string>
    <string name="acc_s_vers_la_galerie">Access galery</string>
    <string name="s_l_ction_des_photos">Select photos</string>
    <string name="param_tres">Parameters</string>
    <string name="hello_swipixel">Hello SwiPixel !</string>
    <string name="btn_reject">Reject button</string>
    <string name="btn_like">Like button</string>
    <string name="btn_delete">Bin button</string>
    <string name="sortPicture">Pictures to sort</string>
    <string name="button">Button</string>
    <string name="imagerdm">imagerdm</string>
    <string name="pick_a_photo">Pick a photo</string>
    <string name="vider_la_corbeille">Empty bin</string>
    <string name="swiper">swiper</string>
    <string name="logo">logo</string>
    <string name="register_page">REGISTER PAGE</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="logout">LOGOUT</string>
    <string name="login_with_google_account">Login with Google account :</string>
    <string name="web_client_id">801365896002–3ba9ccsjckr1fiu9hn9s212pt5lcd42j.apps.googleusercontent.com</string>
    <string name="password_visibility">password_visibility</string>
    <string name="confirm_password">confirm password</string>
    <string name="Confirm_password">Confirm password</string>
    <string name="revert">Revert</string>
    <string name="bin">Bin</string>
    <string name="app_bin">app bin</string>
    <string name="confirmation_empty_bin">Are you sure you want to empty the bin and delete these photos ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text_pick_photo">text pick photo</string>
    <string name="pick_photos">Pick photos</string>
    <string name="info_button">info button</string>
    <string name="remaining_pictures">Remaining pictures :</string>
    <string name="revert_btn">Revert Button</string>
    <string name="_0">0</string>
</resources>