<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundColor">

        <ImageView
                android:id="@+id/swipeMedia"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/sortPicture"
                app:layout_constraintBottom_toTopOf="@+id/swipeLike"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
                android:id="@+id/swipeReject"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/btn_reject"
                android:scaleType="fitCenter"
                android:src="@drawable/round_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/swipeLike"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
                android:id="@+id/swipeLike"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/btn_like"
                android:scaleType="fitCenter"
                android:src="@drawable/round_favorite_24"
                app:layout_constraintBottom_toBottomOf="@+id/swipeReject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/swipeReject"
                app:layout_constraintTop_toTopOf="@+id/swipeReject" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>